<resources>
    <string name="app_name">智能管家</string>
    <string name="text_app_name">应用名:</string>
    <string name="text_version">版本号:</string>
    <string name="text_setting">设置</string>
    <string name="text_user_name">用户名</string>
    <string name="text_age">年龄</string>
    <string name="text_desc">简介</string>
    <string name="text_boy">男</string>
    <string name="text_girl_f">女</string>
    <string name="text_password">密码</string>
    <string name="text_password_again">再输入一次</string>
    <string name="text_email">邮箱</string>
    <string name="text_register_remind">注册成功需要邮箱验证，否则无法登录！</string>
    <string name="text_registered">注册</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_now_login">正在登陆..</string>
    <string name="txt_edit_info">编辑资料</string>
    <string name="txt_name">用户名:</string>
    <string name="txt_sex">性别:</string>
    <string name="txt_age">年龄:</string>
    <string name="txt_desc">简介:</string>
    <string name="txt_determine">确定修改</string>
    <string name="txt_tracking">物流查询</string>
    <string name="txt_search_location">归属地查询</string>
    <string name="txt_sign_out">退出登录</string>
    <string name="txt_cannot_null">输入框不能为空</string>
    <string name="edit_success">修改成功</string>
    <string name="edit_fail">修改失败</string>
    <string name="txt_company">快递公司</string>
    <string name="txt_tracking_number">快递单号</string>
    <string name="txt_check">查询</string>
    <string name="txt_no_result">找不到所查询的包裹信息</string>
    <string name="txt_uploading">正在上传</string>
    <string name="text_setting_title_1">语音播报</string>
    <string name="text_setting_content_1">开启之后与服务管家对话，语音播报</string>
    <string name="text_setting_title_2">短信智能提醒</string>
    <string name="text_setting_content_2">开启之后收到短信时弹出窗口提醒</string>
    <string name="txt_get_sms">收到短信</string>
    <string name="txt_huifu">回复</string>
    <string name="txt_close">关闭</string>
    <string name="text_setting_title_3">检查版本</string>
    <string name="text_setting_content_3">检查是否有新版本提示下载</string>
    <string name="txt_donot_leave">下载过程中，请勿离开</string>
    <string name="text_setting_title_4">扫一扫</string>
    <string name="text_setting_content_4">扫描二维码或者条形码</string>
    <string name="text_setting_content_5">把自己分享给朋友吧</string>
    <string name="text_setting_title_5">二维码分享</string>
    <string name="text_setting_title_6">我的位置</string>
    <string name="text_setting_content_6">时刻掌握自身位置</string>
    <string name="text_setting_title_7">关于软件</string>
    <string name="text_setting_content_7">开发学习使用，欢迎探讨！</string>
    <string name="txt_web">官网:暂无</string>
    <string name="text_about_email">Email: xxlangdou@gmail.com</string>
    <string name="txt_xiaoyou">你好，我是小优</string>
    <string name="text_too_long">长度太长</string>
    <string name="edit_can_not_be_null">输入框不能为空</string>
    <string name="txt_balabala">巴拉巴拉</string>
    <string name="txt_file_not_exist">文件不存在</string>
    <string name="txt_nothing_typed">这个人很懒，什么都没留下！</string>
    <string name="txt_sms_comes">来短信了</string>
    <string name="txt_sms_content">短信的内容:</string>
    <string name="txt_sms_send_by">发件人:</string>
    <string name="txt_press_back">我按了Back键</string>
    <string name="txt_press_home">我点击了HOME键</string>
    <string name="email_sent">邮件已经发送至:</string>
    <string name="email_send_fail">邮件发送失败</string>
    <string name="pass_reset">重置密码成功</string>
    <string name="pass_reset_fail">重置密码失败</string>
    <string name="twice_different">两次输入的密码不一致</string>
    <string name="gps_completed">gps定位成功</string>
    <string name="network_completed">网络定位成功</string>
    <string name="offline_completed">离线定位成功，离线定位结果也是有效的</string>
    <string name="server_fail">服务端网络定位失败，可以反馈IMEI号和大体定位时间到loc-bugs@baidu.com，会有人追查原因</string>
    <string name="network_cannot_connect">网络不同导致定位失败，请检查网络是否通畅</string>
    <string name="cannot_gps">无法获取有效定位依据导致定位失败，一般是由于手机的原因，处于飞行模式下一般会造成这种结果，可以试着重启手机</string>
    <string name="gps_result">结束定位</string>
    <string name="to_email_verify">请前往邮箱验证</string>
    <string name="login_fail">登录失败:</string>
    <string name="txt_city">归属地:</string>
    <string name="txt_tel_zip">区号:</string>
    <string name="txt_zip">邮编:</string>
    <string name="txt_tel_company">运营商:</string>
    <string name="txt_type">类型:</string>
    <string name="my_smartbutler">我的智能管家</string>
    <string name="register_completed">注册成功</string>
    <string name="register_fail">注册失败：</string>
    <string name="txt_check_version">检测版本</string>
    <string name="the_newest">当前已经是最新版本!</string>
    <string name="need_update">有新版本啦！</string>
    <string name="txt_update">更新</string>
    <string name="txt_cancel">取消</string>
    <string name="download_completed">下载成功!</string>
    <string name="download_fail">下载失败!</string>
    <string name="txt_unknow">未知</string>
    <string name="replace_completed">替换成功!</string>
    <string name="replace_fail">替换失败!</string>
    <string name="title_1">服务管家</string>
    <string name="title_2">微信精选</string>
    <string name="title_3">美女社区</string>
    <string name="title_4">个人中心</string>
    <string name="text_remenber_pass">记住密码</string>
    <string name="text_login">登录</string>
    <string name="text_enter_num">请输入号码</string>
    <string name="take_pic">拍照</string>
    <string name="open_pic">图库</string>
    <string name="txt_enter">输入</string>
    <string name="text_send">发送</string>
    <string name="txt_left">左边</string>
    <string name="splash_1">智能语音</string>
    <string name="splash_3">基础定位</string>
    <string name="open_main">进入主页</string>
    <string name="splash_2">精选图集</string>
    <string name="txt_right">右边</string>
    <string name="txt_news_info">新闻详情</string>
    <string name="text_registering">正在注册..</string>
    <string name="txt_resetting">正在重置..</string>
    <string name="txt_now_version">当前版本:</string>
</resources>
