<?xml version="1.0" encoding="utf-8"?>
<com.imooc.smartbutler.view.DispatchLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/dialog_white_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13512312312"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/replace_completed"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/txt_close"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_send_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_bg"
                android:text="@string/txt_huifu"
                android:textColor="#fff" />
        </RelativeLayout>
    </LinearLayout>
</com.imooc.smartbutler.view.DispatchLinearLayout>